<resources>
    <string name="app_name">ProvIO</string>

    <!-- Allgemein -->
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <!--*****************************************************************************************-->

    <!-- Hauptmenü -->
    <string name="Einstellungen">Einstellungen</string>
    <string name="ErfasseTag">Erfasse Tag</string>
    <!--*****************************************************************************************-->
    <!--ErfasseTag-->
    <string name="Verkauf">Verkauf in €</string>
    <string name="Wieviel">Wie viel € verkauft?</string>
    <string name="betrag">Betrag hinzufügen</string>
    <string name="derBetrag">Der Betrag </string>
    <string name="wurdehin"> € wurden hinzugefügt </string>
    <string name="gerarbetet">Gearbeitete Stunden:</string>
    <string name="Stunden">Stunden</string>
    <string name="Statistik_Monat">Monatsstatistik</string>
    <string name="stundenadd">Stunden hinzufügen</string>
    <string name="Verkaufmonat">Verkauf Monat</string>
    <string name="produktivität">Produktivität/Stunde</string>
    <string name="ueberschreiben">Monatswerte überschreiben</string>
    <string name="monatueberschreiben">Monat überschreiben?</string>
    <string name="monatuberschreibenlang">Soll der Monat wirkich überschrieben werden? Kann nicht wieder hergestellt werden!</string>
    <string name="abschliessen">Monat abschließen</string>
    <!--*****************************************************************************************-->
    <!--Einstellungen-->
    <string name="gehalt">Gehalt: </string>
    <string name="trage_gehalt">Trage Gehalt ein</string>
    <string name="fixum">Fixum:</string>
    <string name="trage_fixum">Trage Fixum ein</string>
    <string name="erklaerung">Trage deine Prozente und Stundenproduktivität ein</string>
    <string name="erste_Prozent">Erste Staffelung in %</string>
    <string name="erste_Gehalt">Erste Produktivität/H in€</string>
    <string name="zweite_Prozent">Zweite Staffelung in %</string>
    <string name="zweite_Gehalt">Zweite Produktivität/H in€</string>
    <string name="dritte_Prozent">Dritte Staffelung in %</string>
    <string name="dritte_Gehalt">Dritte Produktivität/H in€</string>
    <string name="letzte_Prozent">Letzte Staffelung in %</string>
    <string name="letzte_Gehalt">Letzte Produktivität/H in€</string>
    <string name="safe">Speichern</string>
    <string name="toastgespeichert">Werte wurden gespeichert!</string>
    <string name="toastfehler">Felder dürfen nicht leer sein!</string>
    <!--*****************************************************************************************-->
</resources>
